--- a/SSO Demo/SSO Demo.vcxproj
+++ b/SSO Demo/SSO Demo.vcxproj
@@ -129,6 +129,11 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="client\Cookies.txt" />
+    <Text Include="server\IdP_DB.txt" />
+    <Text Include="server\open_session.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
