--- a/SSO Demo/SSO Demo.vcxproj
+++ b/SSO Demo/SSO Demo.vcxproj
@@ -128,11 +128,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="server.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="client\Cookies.txt" />
     <Text Include="server\IdP_DB.txt" />
     <Text Include="server\open_session.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="server.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
